[gd_scene load_steps=18 format=3 uid="uid://b340skklkqw7a"]

[ext_resource type="Shader" uid="uid://hltx7iqku6kl" path="res://player.gdshader" id="1_lti8b"]
[ext_resource type="Script" uid="uid://bfx128oc3f2il" path="res://menu.gd" id="1_mae5d"]
[ext_resource type="FontFile" uid="uid://dsmpymda21d0v" path="res://assets/real-vhs-font/RealVhsFontRegular-WyV0z.ttf" id="1_ouk20"]
[ext_resource type="AudioStream" uid="uid://bqwc2jrbm6uod" path="res://assets/White Noise.mp3" id="4_4hy44"]

[sub_resource type="LabelSettings" id="LabelSettings_4hy44"]
font = ExtResource("1_ouk20")
font_size = 150

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ytr4m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l48gv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mae5d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4hy44"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dwrpx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ecwwl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kk3ma"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nrnbx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iqepy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h1wq0"]

[sub_resource type="LabelSettings" id="LabelSettings_mae5d"]
font = ExtResource("1_ouk20")
font_size = 100

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ouk20"]
shader = ExtResource("1_lti8b")
shader_parameter/brightness = 1.02
shader_parameter/contrast = 1.08
shader_parameter/saturation = 1.1
shader_parameter/gamma = 1.05
shader_parameter/curvature = 0.14
shader_parameter/corner_soften = 0.06
shader_parameter/vignette = 0.38
shader_parameter/scanline_strength = 0.95
shader_parameter/scanline_density = 1.15
shader_parameter/interlace_strength = 0.2
shader_parameter/mask_strength = 0.22
shader_parameter/mask_scale = 1.0
shader_parameter/chroma_offset_px = 1.6
shader_parameter/luma_smear_px = 2.2
shader_parameter/jitter_px = 1.8
shader_parameter/wobble_px = 1.5
shader_parameter/tape_noise = 0.22
shader_parameter/tape_lines = 0.35
shader_parameter/roll_speed = 0.1
shader_parameter/roll_strength = 0.15
shader_parameter/glow_strength = 0.25
shader_parameter/glow_threshold = 0.65

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mae5d")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101867564, 0.10186755, 0.10186755, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -23.5
offset_right = 20.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ouk20")
text = "MASK.EXE"
label_settings = SubResource("LabelSettings_4hy44")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.9529412, 1, 0.3137255, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9529412, 1, 0.3137255, 1)
theme_override_fonts/font = ExtResource("1_ouk20")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_ytr4m")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_l48gv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mae5d")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dwrpx")
text = "PLAY"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.9529412, 1, 0.3137255, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9529412, 1, 0.3137255, 1)
theme_override_fonts/font = ExtResource("1_ouk20")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_ecwwl")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_kk3ma")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nrnbx")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_iqepy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h1wq0")
text = "QUIT (RECOMMANDED)"

[node name="WarningScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WarningLabel" type="Label" parent="WarningScreen"]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -539.5
offset_top = -33.5
offset_right = 539.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "THIS GAME CONTAINS JUMPSCARES, BE AWARE."
label_settings = SubResource("LabelSettings_mae5d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlackBG" type="ColorRect" parent="WarningScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ShaderOverlay" type="ColorRect" parent="."]
z_index = 100
material = SubResource("ShaderMaterial_ouk20")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4hy44")
volume_db = -40.0
autoplay = true
